feat: enhance sanitization ux and analytics hooks